Adding POST Financial Account endpoint
* Added POST Financial (account) endpoint
* Removed redundant Awards endpoints
* Removed redundant SlimAwards object and endpoints
