# datastore-api-server/swagger/swagger.yaml
@@ -123,70 +123,6 @@ paths:
             $ref: "#/definitions/Error"
       x-tags:
       - tag: "awards"
-  /awards/slim/{qualifiers}:
-    get:
-      tags:
-      - "awards"
-      summary: "Returns all awards which match the specified qualifiers"
-      description: "Returns an array of award objects with a low level of detail"
-      operationId: "controllers.default_controller.awards_slim_qualifiers_get"
-      parameters:
-      - name: "qualifiers"
-        in: "path"
-        description: "A set of qualifiers by which to filter the data.\nIf you are\
-          \ using multiple filters, it is recommended to use the POST version of this\
-          \ endpoint.\n\nThe format is FIELD:CONSTRAINT:CONSTRAINT PARAMETER,\nFIELD:CONSTRAINT:CONSTRAINT\
-          \ PARAMETER, ...\n\nFor example if we wanted to find awards greater than\
-          \ $10,000\nfor an agency with identifier of 097, we could use:\n\nAgencyIdentifier:equals:097,TransactionObligatedAmount:greater:10000\n"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/SlimAwards"
-        404:
-          description: "Resource not found."
-          schema:
-            $ref: "#/definitions/Error"
-        500:
-          description: "An unexpected error occured."
-          schema:
-            $ref: "#/definitions/Error"
-      x-tags:
-      - tag: "awards"
-  /awards/{qualifiers}:
-    get:
-      tags:
-      - "awards"
-      summary: "Returns all awards which match the specified qualifiers"
-      description: "Returns an array of award objects with a high level of detail"
-      operationId: "controllers.default_controller.awards_qualifiers_get"
-      parameters:
-      - name: "qualifiers"
-        in: "path"
-        description: "A set of qualifiers by which to filter the data.\nIf you are\
-          \ using multiple filters, it is recommended to use the POST version of this\
-          \ endpoint.\n\nThe format is FIELD:CONSTRAINT:CONSTRAINT PARAMETER,\nFIELD:CONSTRAINT:CONSTRAINT\
-          \ PARAMETER, ...\n\nFor example if we wanted to find awards greater than\
-          \ $10,000\nfor an agency with identifier of 097, we could use:\n\nAgencyIdentifier:equals:097,TransactionObligatedAmount:greater:10000\n"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/Awards"
-        404:
-          description: "Resource not found."
-          schema:
-            $ref: "#/definitions/Error"
-        500:
-          description: "An unexpected error occured."
-          schema:
-            $ref: "#/definitions/Error"
-      x-tags:
-      - tag: "awards"
   /financial/account/{MAC}:
     get:
       tags:
@@ -214,6 +150,39 @@ paths:
             $ref: "#/definitions/Error"
       x-tags:
       - tag: "financial"
+  /financial/accounts/:
+    post:
+      tags:
+      - "financial"
+      summary: "Returns all accounts which match specified qualifiers with a high\
+        \ level of detail"
+      operationId: "controllers.default_controller.financial_accounts_post"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "A json object representing a set of qualifiers\n"
+        required: false
+        schema:
+          $ref: "#/definitions/postqualifiers"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Accounts"
+        404:
+          description: "Resource not found."
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: "An unexpected error occured."
+          schema:
+            $ref: "#/definitions/Error"
+      x-tags:
+      - tag: "financial"
 definitions:
   postqualifiers:
     type: "object"
@@ -224,69 +193,14 @@ definitions:
         description: "The field name to which the filter applies"
       filter:
         $ref: "#/definitions/postqualifiers_filter"
+  Accounts:
+    type: "array"
+    items:
+      $ref: "#/definitions/Account"
   Awards:
     type: "array"
     items:
       $ref: "#/definitions/Award"
-  SlimAwards:
-    type: "array"
-    items:
-      $ref: "#/definitions/SlimAward"
-  SlimAward:
-    type: "object"
-    properties:
-      AgencyIdentifier:
-        type: "string"
-        description: "The agency code identifies the department or agency that is\
-          \ responsible for the account.\n"
-      BeginningPeriodOfAvailability:
-        type: "string"
-        description: "In annual and multi-year funds, the beginning period of availability\
-          \ identifies the first year of availability under law that an appropriation\
-          \ account may incur new obligations.\n"
-      EndingPeriodOfAvailability:
-        type: "string"
-        description: "In annual and multi-year funds, the end period of availability\
-          \ identifies the last year of funds availability under law that an appropriation\
-          \ account may incur new obligations.\n"
-      MainAccountCode:
-        type: "string"
-        description: "The main account code identifies the account in statute.\n"
-      SubAccountCode:
-        type: "string"
-        description: "This is a component of the TAS. Identifies a Treasury-defined\
-          \ subdivision of the main account. This field cannot be blank. Subaccount\
-          \ 000 indicates the Parent account.\n"
-      PIID:
-        type: "string"
-        description: "The unique identifier of the specific award being reported.\n"
-      ParentAwardId:
-        type: "string"
-        description: "The identifier of the procurement award under which the specific\
-          \ award is issued (such as a Federal Supply Schedule). Term currently applies\
-          \ to procurement actions only\n"
-      FAIN:
-        type: "string"
-        description: "The Federal Award Identification Number (FAIN) is the unique\
-          \ ID within the Federal agency for each (non-aggregate) financial assistance\
-          \ award.\n"
-      URI:
-        type: "string"
-        description: "Unique Record Identifier. An agency defined identifier that\
-          \ (when provided) is unique for every reported action.\n"
-      TransactionObligatedAmount:
-        type: "string"
-        description: "The definition for this element appears in Section 20 of OMB\
-          \ Circular A-11 issued June 2015; a brief summary from A-11 appears below.\
-          \ Obligation means a binding agreement that will result in outlays, immediately\
-          \ or in the future. Budgetary resources must be available before obligations\
-          \ can be incurred legally.\n"
-      AwardType:
-        type: "string"
-        description: "Description (and corresponding code) that provides information\
-          \ to distinguish type of contract, grant, or loan and provides the user\
-          \ with more granularity into the method of delivery of the outcomes.\n"
-    description: "An object representing an award, with a low level of detail"
   Award:
     type: "object"
     properties:
@@ -718,16 +632,6 @@ parameters:
     name: "URI"
     in: "path"
     description: "The URI of the requested ward"
-    required: true
-    type: "string"
-  qualifiers:
-    name: "qualifiers"
-    in: "path"
-    description: "A set of qualifiers by which to filter the data.\nIf you are using\
-      \ multiple filters, it is recommended to use the POST version of this endpoint.\n\
-      \nThe format is FIELD:CONSTRAINT:CONSTRAINT PARAMETER,\nFIELD:CONSTRAINT:CONSTRAINT\
-      \ PARAMETER, ...\n\nFor example if we wanted to find awards greater than $10,000\n\
-      for an agency with identifier of 097, we could use:\n\nAgencyIdentifier:equals:097,TransactionObligatedAmount:greater:10000\n"
     required: true
     type: "string"
 responses:
